<resources>
    <string name="app_name">P4 Project Daniel</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_sell">Sell</string>
    <string name="title_about">About</string>
    <string name="product_name">Product name</string>
    <string name="title_about_text">This project is a software solution for Himmerlands Boligforening</string>
    <string name="title_team">Team</string>
    <string name="feedback_main_text">Thanks for using our app, any feedback is appreciated. </string>
    <string name="title_team_members">Thomas Rasmussen - Mohammed Omar - Nicklas Høj - Daniel Prior</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
</resources>