<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_feedback" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_baseline_sell"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_face_24"
        android:title="@string/title_profile" />



</menu>